[package]
name = "libcaca-sys"
version = "0.1.0"
edition = "2018"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.95"

[build-dependencies]
bindgen = "0.58.1"
cmake = "0.1.45"
num_cpus = "1.13.0"

[features]
default = []
conio = []
win32 = []
x11 = []
cocoa = []
